--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         
         <!-- Copyright footer added here -->
-        <footer style="text-align: center; padding: 15px; color: #718096; font-size: 12px; border-top: 1px solid #e2e8f0;">
+        <footer class="copyright-footer">
             &copy; 2025 AIGsniper. All rights reserved.
         </footer>
     </div>
