--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="container">
         <header>
             <h1>Multiplayer Chat</h1>
-            <div id="users-online">0 users online</div>
+            <div>
+                <span id="users-online">0 users online</span>
+                <span id="encryption-status" style="margin-left: 10px; font-size: 12px; background: #48bb78; color: white; padding: 2px 8px; border-radius: 10px;">Encrypted</span>
+            </div>
         </header>
         
         <div class="username-setup" id="username-setup">
