--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
                 </div>
             </div>
         </div>
+
+        <div class="sidebar">
+            <h3>Online Users</h3>
+            <div id="active-users-list" class="active-users-list">
+                <!-- Users will be populated here -->
+            </div>
+        </div>
+
         <div id="mod-tools" style="display: none; padding: 10px; background: #f0f0f0; border-top: 1px solid #ccc;">
             <h3>Moderator Tools</h3>
             <div id="user-list"></div>
