--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <div class="container">
+
+        <div class="sidebar">
+            <div class="sidebar-header">
+                <h3>Online Users</h3>
+                <span id="users-count">0</span>
+            </div>
+            <div id="users-list" class="users-list">
+                <!-- Users will be populated here -->
+            </div>
+        </div>
+
         <header>
             <h1>Multiplayer Chat</h1>
             <div>
@@ -35,29 +46,22 @@
                 </div>
             </div>
         </div>
-
-        <div class="sidebar">
-            <h3>Online Users</h3>
-            <div id="active-users-list" class="active-users-list">
-                <!-- Users will be populated here -->
-            </div>
-        </div>
-
-        <div id="mod-tools" style="display: none; padding: 10px; background: #f0f0f0; border-top: 1px solid #ccc;">
+        
+<!--         <div id="mod-tools" style="display: none; padding: 10px; background: #f0f0f0; border-top: 1px solid #ccc;">
             <h3>Moderator Tools</h3>
             <div id="user-list"></div>
             <div>
                 <input type="text" id="kick-user" placeholder="Username to kick">
                 <button id="kick-btn">Kick User</button>
             </div>
-        </div>
+        </div> -->
         <div id="mod-activation" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 20px rgba(0,0,0,0.3); z-index: 1000;">
             <h3>Moderator Authentication</h3>
             <input type="password" id="mod-password-input" placeholder="Enter mod password">
             <button id="mod-submit-btn">Submit</button>
             <button id="mod-cancel-btn" style="margin-left: 10px;">Cancel</button>
         </div>
-        <!-- Copyright footer added here -->
+        <!-- Copyright footer -->
         <footer class="copyright-footer">
             &copy; 2025 AIGsniper. All rights reserved.
         </footer>
