--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
         <!-- Copyright footer -->
         <footer class="copyright-footer">
-            &copy; 2025 AIGsniper. All rights reserved.
+            &copy; 2025 AIGsniper. All rights reserved. The developer does not accept responsibility of misuse of app
         </footer>
     </div>
 
