--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         
         <!-- Copyright footer -->
         <footer class="copyright-footer">
-            &copy; 2025 AIGsniper. All rights reserved. The developer does not accept any responsibility for misuse of app
+            &copy; 2025 AIGsniper. All rights reserved. This is a cool proof of concept project to see if i could get live client server comms working
         </footer>
     </div>
 
@@ -83,3 +83,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
