--- a/index.html
+++ b/index.html
@@ -56,16 +56,24 @@
             </div>
         </div>
         
-        <div id="mod-activation" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 20px rgba(0,0,0,0.3); z-index: 1000;">
-            <h3>Moderator Authentication</h3>
-            <input type="password" id="mod-password-input" placeholder="Enter mod password">
-            <button id="mod-submit-btn">Submit</button>
-            <button id="mod-cancel-btn" style="margin-left: 10px;">Cancel</button>
-        </div>
+<!-- Replace the existing mod-activation div with this -->
+<div id="server-activation" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 20px rgba(0,0,0,0.3); z-index: 1000;">
+  <h3>Server Activation Required</h3>
+  <p style="margin-bottom: 15px; color: #666; font-size: 14px;">This server requires moderator activation to function.</p>
+  <input type="password" id="server-password-input" placeholder="Enter activation password">
+  <div style="margin-top: 15px; display: flex; gap: 10px;">
+    <button id="server-activate-btn">Activate Server</button>
+    <button id="server-cancel-btn">Cancel</button>
+  </div>
+</div>
+
+<div id="server-status" style="position: fixed; bottom: 10px; left: 10px; background: #48bb78; color: white; padding: 5px 10px; border-radius: 5px; font-size: 12px; display: none;">
+  Server Active
+</div>
         
         <!-- Copyright footer -->
         <footer class="copyright-footer">
-            &copy; 2025 AIGsniper. All rights reserved. This is a cool proof of concept project to see if i could get live client server comms working
+            &copy; 2025 AIGsniper. All rights reserved. This is a cool proof of concept project to see if i could get live client server comms working.
         </footer>
     </div>
 
@@ -83,4 +91,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
