--- a/kicked.html
+++ b/kicked.html
@@ -1,1 +1,24 @@
-<!doctypehtml><html lang="en"><meta charset="UTF-8"><title>Kicked</title><style>body{display:flex;justify-content:center;align-items:center;height:100vh;background:#2f3136;color:#ed4245;font-family:sans-serif;flex-direction:column}h1{font-size:2em;margin-bottom:10px}p{color:#ccc}</style><h1>You were kicked</h1><p>Please contact a moderator if you think this was a mistake.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Kicked</title>
+  <style>
+    body {
+      display: flex; 
+      justify-content: center; 
+      align-items: center;
+      height: 100vh; 
+      background: #2f3136; 
+      color: #ed4245;
+      font-family: sans-serif;
+      flex-direction: column;
+    }
+    h1 { font-size: 2em; margin-bottom: 10px; }
+    p { color: #ccc; }
+  </style>
+</head>
+<body>
+  <h1>You were kicked</h1>
+</body>
+</html>
