--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
             </div>
         </div>
         
-<!-- Replace the existing mod-activation div with this -->
 <div id="server-activation" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 20px rgba(0,0,0,0.3); z-index: 1000;">
   <h3>Server Activation Required</h3>
   <p style="margin-bottom: 15px; color: #666; font-size: 14px;">This server requires moderator activation to function.</p>
@@ -67,7 +66,7 @@
   </div>
 </div>
 
-<div id="server-status" style="position: fixed; bottom: 10px; left: 10px; background: #48bb78; color: white; padding: 5px 10px; border-radius: 5px; font-size: 12px; display: none;">
+<div id="server-status" style="position: fixed; bottom: 10px; left: 10px; background: #48bb78; color: white; padding: 5px 10px; border-radius: 5px; font-size: 12px;">
   Server Active
 </div>
         
